[tool.poetry]
name = "pango-collapse"
version = "0.5.3"
description = ""
authors = ["wytamma <wytamma.wirth@me.com>"]
readme = "README.md"

[tool.poetry.scripts]
pango-collapse = "pango_collapse.main:app"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
typer = {extras = ["all"], version = "^0.6.1"}
pango-aliasor = "^0.2.0"
pandas = ">=1.3,<=1.4.4"
numpy = ">=1.21,<=1.23.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
